src/components/all.scss
@import "~bulma/sass/utilities/initial-variables";

// Config vars
// Kaldi logo brand color: #FD461E
$kaldi-red: #D64000;
$kaldi-red-invert: #fff;

$primary: $kaldi-red;
$primary-invert: $kaldi-red-invert;
$body-color: #333;
$black: #2b2523;

$red: #FF6060;

// FONTS
@font-face {
  font-family: 'Sofia Pro SemiBold';
  src: url('/fonts/SofiaProSemiBold.ttf');
}

html,
body {
  margin: 0;
  overflow-x: hidden;
  scroll-behavior: smooth; 
}

// COLORS
.white {
  --color: #fff;
}

.yellow {
  --color: #ffd42d;
}

.red {
  --color: #ff6060;
}

// COLOR BEHAVIOR
.text {
  color: var(--color);
}

.bcg {
  background-color: var(--color);
}

// TEXT
.white-text {
  color: white;
}

.huge-text {
  font-size: 10rem;
}

.text-center {
  text-align: center;
}

// FONT SIZE
.font-100 {
  font-size: 1rem;
}

.font-125 {
  font-size: 1.25rem;
}

.font-150 {
  font-size: 1.5rem;
}

.font-175 {
  font-size: 1.75rem;
}

.font-200 {
  font-size: 200rem;
}

// FONT WEIGHT
.fontweight-light {
  font-weight: lighter;
}

.fontweight-normal {
  font-weight: normal;
}

.fontweight-bold {
  font-weight: bold;
}

// MARGINS
.margin-0 {
  margin: 0;
}

// OVERFLOW
.overflowy-hidden {
  overflow-y: hidden;
}

.overflowx-hidden {
  overflow-x: hidden;
}

// FLEX 
.flex {
  display: flex;
}

.flex.flex-column {
  flex-direction: column;
}

.flex.flex-wrap {
  flex-wrap: wrap;
}

.flex.justifycontent-center {
  justify-content: center;
  align-items: center;
}

.flex.alignitems-center {
  align-items: center;
}

// GEOMETRY
.circle {
  width: 0.6rem;
  height: 0.6rem;
  border-radius: 50%;
  background-color: #ffffff80;
  transition: .25s ease-in-out;
}

.square {
  width: 1rem;
  height: 1rem;
  background-color: #fff;
  transition: .25s ease-in-out;
}

.arrow {
  --color: #fff;

  display: block;
  margin: 0 auto;
  width: 1.25rem;
  height: 1.25rem;
  border-width: 0.15rem;
  border-color: var(--color);
  border-style: solid;
  border-radius: 0.125rem;
  transform: rotate(45deg);
  cursor: pointer;
  
  &.arrow-up {
    border-right: none;
    border-bottom: none;
  }

  &.arrow-down {
    border-top: none;
    border-left: none;
  }

  &.arrow-right {
    border-bottom: none;
    border-left: none;
  }

  &.arrow-left {
    border-top: none;
    border-right: none;
  }
}

// NAVBAR
nav { 
  display: flex;
  justify-content: center;
  height: 4.5rem;

  a.logo {
    margin-right: auto;
    margin-left: 1rem;

    img {
      width: 3.75rem;
    }
  }

  #item-list {
    position: absolute;
    height: 4.5rem;
    min-width: 25vw;

    a {
      flex-basis: 15%;
    }
  }
}

.navbar-brand .navbar-item.logo {
  padding: 0 1rem;
}

// FOOTER
footer.footer {
  padding: 3rem 0rem 0rem;
  background-color: transparent;
}

.content .taglist {
  list-style: none;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 1.5rem;
  margin-top: 1.5rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: left;
  align-items: center;
  li {
    padding: 0 2rem 1rem 0;
    margin-bottom: 1.5rem;
    margin-top: 0;
  }
}
// Helper Classes
.full-width-image-container {
  width: 100vw;
  height: 400px;
  position: relative;
  left: 50%;
  right: 50%;
  margin: 2em -50vw;
  background-size: cover;
  background-position: bottom;
  display: flex;
  justify-content: center;
  align-items: center;
}

.full-width-image {
  width: 100vw;
  height: 400px;
  background-size: cover;
  background-position: bottom;
  display: flex;
  justify-content: center;
  align-items: center;
}

.btn {
  display: inline-block;
  padding: 12px 16px 10px;
  font-size: 18px;
  font-size: 1rem;
  line-height: 1.25;
  background-color: #fff;
  border-radius: .25rem;
  text-decoration: none;
  font-weight: 700;
  color: #CC3700;
  text-align: center;
  -webkit-box-shadow: inset 0 0 0 2px #CC3700;
  box-shadow: inset 0 0 0 2px #f40;
  -webkit-transition: all .15s ease;
  transition: all .15s ease;
}

.margin-top-0 {
  margin-top: 0 !important;
}

// Override for use of svg's from https://simpleicons.org/
.icon svg {
  width: 1.5rem;
  height: 1.5rem;
  fill: currentColor;
}

//Menu overrides
$menu-item-color: $white-ter;
$menu-item-hover-color: $black !important;
$menu-item-hover-background-color: $black;
$menu-item-active-color: $kaldi-red-invert;
$menu-item-active-background-color:	$kaldi-red-invert;
$menu-list-border-left: 1px solid $kaldi-red-invert;
$menu-label-color: $white-ter;


.menu-label {
  font-size: 1em !important;
  text-align: left;
}

.menu-list {
  list-style: none !important;
  text-align: left;
}

.social {
  padding: 2em;
  
  a {
    padding: .5em .5em .3em .5em;
    border-radius: 1em;
    background-color: $white-ter;
    margin: .5em;
    width: 1em;
    height: 1em;
    vertical-align: middle;
    display: inline;
  }
}

.full-page {
  width: 100vw;
  height: 100vh;
  overflow-x: hidden;
}

.full-page:first-of-type {
  height: calc(100vh - 4.5rem);
}

.lateral-space {
  padding: 0 20vw 0 20vw;
}

.projects {
  font-size: 72px;
  padding-top: 20vh;
  padding-bottom: 36px;
  font-family: "Sofia Pro SemiBold";
}

// PAGE
.full-page h1#page-title {
  font-family: "Sofia Pro SemiBold";
}

